Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6386

lower transno may overwrite the bigger one in client last_rcvd slot

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.8.0
    • None
    • None
    • 3
    • 9223372036854775807

      The tgt_last_rcvd_update() may update transaction number in client slot with smaller value. That may cause client to see wrong error message:

      LustreError: 3662:0:(import.c:985:ptlrpc_connect_interpret()) pfs2dat1-OST000a_UUID went back in time (transno 77492683762 was previously committed, server now claims 77492683761)! See https://bugzilla.lustre.org/show_bug.cgi?id=9646
      

      This is possible on OST with several IO requests from one client and safe but it is better to keep transaction value in last_rcvd monotonically increased to avoid confusion on client side.

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: